Criada estrutura CRUD para as páginas de gerenciamento do site

--- a/private/src/view/templates/restricted/base.html
+++ b/private/src/view/templates/restricted/base.html
@@ -31,4 +31,9 @@
 </div>
 {% endblock main %}
 
+{%  block scriptsJS %}
+{% include '@links/forms-validation.html' %}
+<script src="/assets/js/pages/restricted.js"></script>
+{% endblock scriptsJS %}
+
 
