--- a/private/src/view/templates/restricted/admin/participants.html
+++ b/private/src/view/templates/restricted/admin/participants.html
@@ -1,11 +1,112 @@
 {% extends "restricted/base.html" %}
 
 {% block innerHead %}
-<title>Administração - Brasil Cursinhos</title>
+<title>Participantes do Evento - Brasil Cursinhos</title>
 <meta name="keywords" content="Brasil Cursinhos">
 <meta name="description" content="Página de administrador do site Brasil Cursinhos.">
 {% endblock innerHead %}
 
 {% block innerMain %}
-    <h2 class="mt-3">Gerenciar participantes do evento</h2>
+<h2 class="mt-3">Gerenciar participantes do evento</h2>
+{% for participant in data %}
+<div class="card mb-3 bg-light">
+  <div class="card-body">
+    <div class="row g-3">
+      <form action="/participants/update" method="post" class="row g-2 col form-{{loop.index}}">
+        <input type="hidden" name="id" value="{{participant.id}}">
+        <input type="hidden" name="form-code" value="{{formCode}}">
+        <div class="col">
+          <label for="name"><b>Nome:</b></label>
+          <input type="text" name="name" class="form-control" value="{{participant.name}}" disabled readonly required>
+        </div>
+        <div class="col-3">
+          <label for="name"><b>CPF:</b></label>
+          <input type="text" name="local" class="form-control" value="{{"%s.%s.%s-%s"|format(participant.cpf[0:3], participant.cpf[3:3], participant.cpf[6:3], participant.cpf[9:])}}" disabled readonly required>
+        </div>
+        <div class="col-4">
+          <label for="name"><b>CUP:</b></label>
+          <input type="text" name="cup" class="form-control" value="{{participant.cup}}" disabled readonly required>
+        </div>
+      </form>
+      <div class="row g-2 col-auto">
+        <div class="col-auto ms-1">
+          <button class="w-auto h-100 btn btn-secondary-bc btn-edit-save" id="btn-edit-save-{{loop.index}}" value="{{loop.index}}">
+            <span class="material-symbols-outlined">edit</span>
+          </button>
+        </div>
+        <div class="col-auto">
+          <button class="w-auto h-100 btn btn-primary-bc btn-delete-cancel" id="btn-delete-cancel-{{loop.index}}" value="{{loop.index}}">
+            <span class="material-symbols-outlined">delete</span>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+{% endfor %}
+<h3>Inserir novo participante</h3>
+<div class="card mb-3 bg-light">
+  <div class="card-body">
+    <form action="/participants/insert" method="post" class="row g-3" id="form-new-activity">
+      <div class="row g-2 col">
+        <input type="hidden" name="form-code" value="{{formCode}}">
+        <div class="col">
+          <label for="name"><b>Nome:</b></label>
+          <input type="text" name="name" class="form-control" required>
+        </div>
+        <div class="col-3">
+          <label for="name"><b>CPF:</b></label>
+          <input type="text" name="cpf" class="form-control" required>
+        </div>
+        <div class="col-4">
+          <label for="name"><b>CUP:</b></label>
+          <input type="text" name="start" class="form-control" required>
+        </div>
+      </div>
+      <div class="row g-2 col-auto">
+        <div class="col-auto ms-1">
+          <button class="w-auto h-100 btn btn-secondary-bc" type="submit">
+            <span class="material-symbols-outlined">save</span>
+          </button>
+        </div>
+        <div class="col-auto">
+          <button class="w-auto h-100 btn btn-primary-bc" type="reset">
+            <span class="material-symbols-outlined">cancel</span>
+          </button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
+<!-- Button trigger modal -->
+<button type="button" data-bs-toggle="modal" data-bs-target="#deletion-confirmation" id="btn-modal" hidden></button>
+<!-- Modal -->
+<div class="modal fade" id="deletion-confirmation" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content border-0">
+      <div class="modal-header bg-primary-color-bc text-white">
+        <h5 class="modal-title" id="exampleModalLabel">Confirmação de exclusão</h5>
+        <button type="button" class="btn-close btn-close-white btn-cancel-deletion" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p class="mb-2">Você tem certeza que deseja excluir esse participante?</p>
+        <p class="mb-0">Não será possível recuperar esses dados após a exclusão.</p>
+        <form action="/participants/delete" method="post" id="deletion-form">
+          <input type="text" name="deletion-id" id="deletion-id" hidden>
+          <input type="text" name="form-code" value="{{formCode}}" hidden>
+        </form>
+      </div>
+      <div class="modal-footer bg-primary-bc border-0">
+        <div class="w-100 text-center">
+          <button type="button" class="btn btn-secondary-bc w-25 mx-1 btn-cancel-deletion" data-bs-dismiss="modal">
+            Cancelar <span class="material-symbols-outlined">cancel</span>
+          </button>
+          <button type="button" class="btn btn-primary-bc w-25 mx-1" id="btn-confirm-deletion">
+            Excluir <span class="material-symbols-outlined">delete</span>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock innerMain %}
