--- a/private/src/view/templates/restricted/admin/participants.html
+++ b/private/src/view/templates/restricted/admin/participants.html
@@ -13,7 +13,7 @@
   <div class="card-body">
     <div class="row g-3">
       <form action="/participants/update" method="post" class="row g-2 col form-{{loop.index}}">
-        <input type="hidden" name="id" value="{{participant.id}}">
+        <input type="hidden" name="id" id="id-{{loop.index}}" value="{{participant.id}}">
         <input type="hidden" name="form-code" value="{{formCode}}">
         <div class="col">
           <label for="name"><b>Nome:</b></label>
