--- a/private/src/view/templates/restricted/admin/profile.html
+++ b/private/src/view/templates/restricted/admin/profile.html
@@ -7,5 +7,6 @@
 {% endblock innerHead %}
 
 {% block innerMain %}
-    <h2 class="mt-3">Meu perfil</h2>
+    <h2 class="mt-3 mb-3">Meu perfil</h2>
+    <p><b>ATENÇÃO: </b>Essa funcionalidade ainda não implementada.</p>
 {% endblock innerMain %}
