Adicionada estrutura básica para o site do ENCUP e Calendário BC

--- a/private/src/view/templates/errorHttp.html
+++ b/private/src/view/templates/errorHttp.html
@@ -3,8 +3,8 @@
 {% set mainClass = 'container text-center mt-5' %}
 
 {% block head %}
-        <title>Erro {{code}} - Cursinho PES</title>
-        <meta name="keywords" content="Cursinho PES; UFSC; Curso pré-vestibular; Projeto Educação Solidária; Araranguá">
+        <title>Erro {{code}} - Brasil Cursinhos</title>
+        <meta name="keywords" content="Brasil Cursinhos; Movimento de Cursinhos Universitários Populares">
         <meta name="description" content="Página de erro.">
         <meta name="robots" content="none">
 {% endblock head %}
@@ -12,7 +12,7 @@
 {% block main %}
 <main class="d-flex align-items-center">
   <div class="w-100 text-center">
-    <h1 class="mb-5" style="font-size: 4.5rem;">Erro {{code}} - {{name}}</h1>
+    <h1 class="mb-5 fs-1">Erro {{code}} - {{name}}</h1>
     {% if description != '' %}
             <p class="fs-4 mb-4">{{description}}</p>
 {% endif %}
