--- a/private/src/view/templates/under-construction.html
+++ b/private/src/view/templates/under-construction.html
@@ -3,8 +3,8 @@
 {% set mainClass = 'container text-center mt-5' %}
 
 {% block head %}
-        <title>Página em construção - Cursinho PES</title>
-        <meta name="keywords" content="Cursinho PES; UFSC; Curso pré-vestibular; Projeto Educação Solidária; Araranguá">
+        <title>Página em construção - Brasil Cursinhos</title>
+        <meta name="keywords" content="Brasil Cursinhos;">
         <meta name="description" content="Página de erro.">
         <meta name="robots" content="none">
 {% endblock head %}
@@ -12,7 +12,7 @@
 {% block main %}
 <main class="container-fluid d-flex align-items-center">
     <div class="w-100 text-center">
-        <h1 class="mb-5" style="font-size: 5rem;">Página em construção!</h1>
+        <h1 class="mb-5 fs-1">Página em construção!</h1>
     <p class="fs-4">A página <b>{{title}}</b> ainda está em construção e ficará disponível em breve.</p>
     <p class='fs-4'><a href="/"><b>Clique aqui</b></a> para voltar a página inicial.</p>
     </div>
