--- a/private/src/view/templates/components/public-footer.html
+++ b/private/src/view/templates/components/public-footer.html
@@ -1,30 +1,34 @@
     <footer class="footer"><!--Rodapé-->
       <div class="container-fluid">
         <div class="row">
-          <div class="col-12 col-md-6">
-            <p class="mt-2 mb-0 fs-5"><b>{{ "now" | date('Y')}} Brasil Cursinhos ©</b></p>
-            <p class="mt-2 mb-0">São Paulo, SP, Brasil</p>
-            <p class="mt-0 mb-3">Contato: contato@brasilcursinhos.org</p>
+          <div class="col-12 col-sm-6">
+            <div class="maxw-260 ms-auto me-auto me-sm-0">
+              <p class="mt-3 mb-0 fs-5"><b>{{ "now" | date('Y')}} Brasil Cursinhos ©</b></p>
+              <p class="mt-2 mb-0"><span class="material-symbols-outlined">location_on</span> São Paulo, São Paulo, Brasil</p>
+              <p class="mt-1 mb-3"><a href="mailto:contato@brasilcursinhos.org" class="text-decoration-none"><span class="material-symbols-outlined"> mail </span> contato@brasilcursinhos.org</a></p>
+            </div>
           </div>
-          <div class="col-12 col-md-6">
-            <p class="mt-2 mb-0 fs-5"><b>Nosso site e redes sociais</b></p>
-            <p class="mt-2 mb-2 icon-links">
-              <a href="https://brasilcurinhos.org" target="_blank">
-                <i class="bi bi-globe fs-2 me-3" role="img" aria-label="Site"></i>
-              </a>
-              <a href="https://www.instagram.com/brasil.cursinhos/" target="_blank">
-                <i class="bi bi-instagram fs-2 me-3" role="img" aria-label="Instagram"></i>
-              </a>
-              <a href="https://www.facebook.com/brasil.cursinhos/" target="_blank">
-                <i class="bi bi-facebook fs-2 me-3" role="img" aria-label="Facebook"></i>
-              </a>
-              <a href="https://www.linkedin.com/company/brasil-cursinhos/" target="_blank">
-                <i class="bi bi-linkedin fs-2 me-3" role="img" aria-label="LinkedIn"></i>
-              </a>
-              <a href="https://www.youtube.com/BrasilCursinhos" target="_blank">
-                <i class="bi bi-youtube fs-2" role="img" aria-label="YouTube"></i>
-              </a>
-            </p>
+          <div class="col-12 col-sm-6">
+            <div class="maxw-260 ms-auto me-auto ms-sm-0">
+              <p class="mt-0 mt-sm-3 pt-1 mb-0 fs-5"><b>Nosso site e redes sociais</b></p>
+              <p class="mt-1 mb-3 icon-links">
+                <a href="https://brasilcurinhos.org" target="_blank">
+                  <i class="bi bi-globe fs-2 me-3" role="img" aria-label="Site"></i>
+                </a>
+                <a href="https://www.instagram.com/brasil.cursinhos/" target="_blank">
+                  <i class="bi bi-instagram fs-2 me-3" role="img" aria-label="Instagram"></i>
+                </a>
+                <a href="https://www.facebook.com/brasil.cursinhos/" target="_blank">
+                  <i class="bi bi-facebook fs-2 me-3" role="img" aria-label="Facebook"></i>
+                </a>
+                <a href="https://www.linkedin.com/company/brasil-cursinhos/" target="_blank">
+                  <i class="bi bi-linkedin fs-2 me-3" role="img" aria-label="LinkedIn"></i>
+                </a>
+                <a href="https://www.youtube.com/BrasilCursinhos" target="_blank">
+                  <i class="bi bi-youtube fs-2" role="img" aria-label="YouTube"></i>
+                </a>
+              </p>
+            </div>
           </div>
         </div>
       </div>
