--- a/private/src/view/templates/encup/homepage.html
+++ b/private/src/view/templates/encup/homepage.html
@@ -12,12 +12,23 @@
 {% endblock head %}
 
 {% block main %}
-    <main class="page-content">
-      <div class="home-banner">
-        <div class="shadow-home-banner d-flex align-items-center">
-        
-        </div>
+<main class="page-content bg-drawn d-flex justify-content-center align-items-center">
+  <div class="card m-4 w-100 maxw-900">
+    <div class="card-header p-0">
+      <img src="/assets/img/banner-encup.png" alt="Banner ENCUP 2022" class="w-100">
+    </div>
+    <div class="card-body">
+      <h4 class="w-100 text-center mb-4">VII Encontro Nacional de&nbsp;Cursinhos Universitários&nbsp;Populares</h4>
+      <p class="w-100 text-center mb-4"><b><span class="material-symbols-outlined">calendar_month</span> Quando?</b> Dias 17 e 18 de setembro. <a href="https://goo.gl/maps/ns2nwh9R3EoHGZ1t9" target="_blank" class=" text-decoration-none text-dark"><b class=" text-nowrap"><span class="material-symbols-outlined">location_on</span>&nbsp;Onde?</b>&nbsp;Unicid&nbsp;Taubaté,&nbsp;São&nbsp;Paulo.&nbsp;</a></p>
+      <p> </p>
+      <div class="w-100 text-center mb-2">
+        <a href="https://www.instagram.com/brasil.cursinhos/" target="_blank" class="btn btn-tertiary-bc text-decoration-none m-1 minw-240 w-auto"><b><span class="material-symbols-outlined">info</span> Mais Informações</b></a>
+        <a href="https://forms.gle/Fz846Lu9abCuCAsD9" target="_blank" class="btn btn-tertiary-bc text-decoration-none m-1 minw-240 w-auto"><b><span class="material-symbols-outlined">priority</span> Realizar Inscrição</b></a>
+        <a href="https://drive.google.com/file/d/1sBJ-S9MN0hfk5OaERUwbBMX3v-lp6lYb/view?usp=sharing" target="_blank" class="btn btn-tertiary-bc text-decoration-none m-1 minw-240 w-auto"><b><span class="material-symbols-outlined">format_list_bulleted</span> Conferir Programação</b></a>
       </div>
-    </main>
+      
+    </div>
+  </div>
+</main>
 {% endblock main %}
 
