--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -38,6 +38,26 @@
   }
 }
 
+.btn-tertiary-bc{
+  background-color: rgb(5, 49, 65);
+  color: #f2f2f2;
+
+  &:hover{
+    background-color: rgb(4, 37, 49) !important;
+    color: #f2f2f2 !important;
+    border-color: $link-hover-color !important;
+  }
+
+  &:focus, .btn.focus {
+    outline: 0 !important;
+    box-shadow: 0 0 0 0.2rem rgb(70, 130, 152) !important;
+  }
+
+  &:disabled, .disabled {
+    opacity: 0.85 !important;
+  }
+}
+
 .btn-expand-sidebar {
 
   @extend .btn-secondary-bc;
