Corrigido endereço do evento

--- a/private/src/view/templates/encup/homepage.html
+++ b/private/src/view/templates/encup/homepage.html
@@ -19,7 +19,7 @@
     </div>
     <div class="card-body">
       <h4 class="w-100 text-center mb-4">VII Encontro Nacional de&nbsp;Cursinhos Universitários&nbsp;Populares</h4>
-      <p class="w-100 text-center mb-4"><b><span class="material-symbols-outlined">calendar_month</span> Quando?</b> Dias 17 e 18 de setembro. <a href="https://goo.gl/maps/ns2nwh9R3EoHGZ1t9" target="_blank" class=" text-decoration-none text-dark"><b class=" text-nowrap"><span class="material-symbols-outlined">location_on</span>&nbsp;Onde?</b>&nbsp;Unicid&nbsp;Taubaté,&nbsp;São&nbsp;Paulo.&nbsp;</a></p>
+      <p class="w-100 text-center mb-4"><b><span class="material-symbols-outlined">calendar_month</span> Quando?</b> Dias 17 e 18 de setembro. <a href="https://goo.gl/maps/ns2nwh9R3EoHGZ1t9" target="_blank" class=" text-decoration-none text-dark"><b class=" text-nowrap"><span class="material-symbols-outlined">location_on</span>&nbsp;Onde?</b>&nbsp;Unicid&nbsp;Tatuapé,&nbsp;São&nbsp;Paulo.&nbsp;</a></p>
       <p> </p>
       <div class="w-100 text-center mb-2">
         <a href="https://www.instagram.com/brasil.cursinhos/" target="_blank" class="btn btn-tertiary-bc text-decoration-none m-1 minw-240 w-auto"><b><span class="material-symbols-outlined">info</span> Mais Informações</b></a>
