Conclusão da funcionalidade básica do sistema para o encup

--- a/private/src/view/templates/restricted/admin/activities.html
+++ b/private/src/view/templates/restricted/admin/activities.html
@@ -15,21 +15,21 @@
       <form action="/activities/update" method="post" class="row g-2 col form-{{loop.index}}">
         <input type="hidden" name="id" id="id-{{loop.index}}" value="{{activity.id}}">
         <input type="hidden" name="form-code" value="{{formCode}}">
-        <div class="col-4">
-          <label for="name"><b>Nome:</b></label>
-          <input type="text" name="name" class="form-control" value="{{activity.name}}" disabled readonly required>
+        <div class="col-12">
+          <label for="name-{{loop.index}}"><b>Nome:</b></label>
+          <input type="text" id="name-{{loop.index}}" name="name" class="form-control" value="{{activity.name}}" disabled readonly required>
         </div>
-        <div class="col">
-          <label for="name"><b>Local:</b></label>
-          <input type="text" name="local" class="form-control" value="{{activity.local}}" disabled readonly required>
+        <div class="col-12">
+          <label for="local-{{loop.index}}"><b>Local:</b></label>
+          <input type="text" id="local-{{loop.index}}" name="local" class="form-control" value="{{activity.local}}" disabled readonly required>
         </div>
-        <div class="col-auto">
-          <label for="name"><b>Início:</b></label>
-          <input type="datetime-local" name="start" class="form-control" value="{{activity.start}}" disabled readonly required>
+        <div class="col-12">
+          <label for="start-{{loop.index}}"><b>Início:</b></label>
+          <input type="datetime-local" id="start-{{loop.index}}" name="start" class="form-control" value="{{activity.start}}" disabled readonly required>
         </div>
-        <div class="col-auto">
-          <label for="name"><b>Final:</b></label>
-          <input type="datetime-local" name="final" class="form-control" value="{{activity.final}}" disabled readonly required>
+        <div class="col-12">
+          <label for="final-{{loop.index}}"><b>Final:</b></label>
+          <input type="datetime-local" id="final-{{loop.index}}" name="final" class="form-control" value="{{activity.final}}" disabled readonly required>
         </div>
       </form>
       <div class="row g-2 col-auto">
@@ -48,7 +48,7 @@
   </div>
 </div>
 {% endfor %}
-<button class="btn btn-secondary-bc" id="btn-new-insertion">
+<button class="btn btn-secondary-bc mb-3" id="btn-new-insertion">
   <span class="material-symbols-outlined">add</span> Inserir nova atividade
 </button>
 <div id="new-insertion-field" class="d-none">
@@ -58,21 +58,21 @@
       <form action="/activities/insert" method="post" class="row g-3" id="form-new-activity">
         <div class="row g-2 col">
           <input type="hidden" name="form-code" value="{{formCode}}">
-          <div class="col-4">
-            <label for="name"><b>Nome:</b></label>
-            <input type="text" name="name" class="form-control" required>
+          <div class="col-12">
+            <label for="name-new"><b>Nome:</b></label>
+            <input type="text" id="name-new" name="name" class="form-control" required>
           </div>
-          <div class="col">
-            <label for="name"><b>Local:</b></label>
-            <input type="text" name="local" class="form-control" required>
+          <div class="col-12">
+            <label for="local-new"><b>Local:</b></label>
+            <input type="text" id="local-new" name="local" class="form-control" required>
           </div>
-          <div class="col-auto">
-            <label for="name"><b>Início:</b></label>
-            <input type="datetime-local" name="start" class="form-control" required>
+          <div class="col-12">
+            <label for="start-new"><b>Início:</b></label>
+            <input type="datetime-local" id="start-new" name="start" class="form-control" required>
           </div>
-          <div class="col-auto">
-            <label for="name"><b>Final:</b></label>
-            <input type="datetime-local" name="final" class="form-control" required>
+          <div class="col-12">
+            <label for="final-new"><b>Final:</b></label>
+            <input type="datetime-local" id="final-new" name="final" class="form-control" required>
           </div>
         </div>
         <div class="row g-2 col-auto">
