Correção no CSS da página de fotos do ENCUP

--- a/private/src/view/templates/encup/pages/photos.html
+++ b/private/src/view/templates/encup/pages/photos.html
@@ -1,6 +1,7 @@
 {% extends "encup/base.html" %}
 
 {% set includeEncupHeader = true %}
+{% set includePublicFooter = true %}
 
 {% block innerHead %}
 <title>ENCUP - Brasil Cursinhos</title>
