Correção no header da página inicial do ENCUP

--- a/private/src/view/templates/encup/components/header.html
+++ b/private/src/view/templates/encup/components/header.html
@@ -8,7 +8,7 @@
         <div class="collapse navbar-collapse" id="navbar-options">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a href="/fotos" class="btn btn-secondary-bc ms-0 ms-lg-3" role="button"><b>Fotos do evento </b><span class="material-symbols-outlined">photo</span></a>
+              <a href="/fotos" class="btn btn-secondary-bc ms-0 ms-lg-3 mt-3 mt-sm-0" role="button"><b>Fotos do evento </b><span class="material-symbols-outlined">photo</span></a>
             </li>
           </ul>
         </div>
