Alterações para o ENCUP 2023

--- a/private/src/view/templates/encup/components/header.html
+++ b/private/src/view/templates/encup/components/header.html
@@ -1,14 +1,14 @@
 <header><!--Barra de navegação-->
     <nav class="navbar navbar-expand-sm fixed-top navbar-dark bg-primary-color-bc">
       <div class="container-fluid">
-        <a href="/"><img src="/assets/img/logos/bc-branco.png" height="40" alt="Projeto Educação Solidária - Cursinho PES"></a><a class="navbar-brand p-0 me-auto lh-1" href="/"><b class="ps-2 font-bc fs-3">ENCUP 2022</b></a>
+        <a href="/"><img src="/assets/img/logos/bc-branco.png" height="40" alt="Projeto Educação Solidária - Cursinho PES"></a><a class="navbar-brand p-0 me-auto lh-1" href="/"><b class="ps-2 font-bc fs-3">ENCUP 2023</b></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-options" aria-controls="navbar-options" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbar-options">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a href="/fotos" class="btn btn-secondary-bc ms-0 ms-lg-3 mt-3 mt-sm-0" role="button"><b>Fotos do evento </b><span class="material-symbols-outlined">photo</span></a>
+              <a href="/fotos" class="btn btn-secondary-bc ms-0 ms-lg-3 mt-3 mt-sm-0" role="button"><b>Fotos do ENCUP 2022 </b><span class="material-symbols-outlined">photo</span></a>
             </li>
           </ul>
         </div>
