--- a/private/src/view/templates/encup/homepage.html
+++ b/private/src/view/templates/encup/homepage.html
@@ -18,13 +18,13 @@
       <img src="/assets/img/banner-encup.png" alt="Banner ENCUP 2022" class="w-100">
     </div>
     <div class="card-body">
-      <h4 class="w-100 text-center mb-4">VII Encontro Nacional de&nbsp;Cursinhos Universitários&nbsp;Populares</h4>
-      <p class="w-100 text-center mb-4"><b><span class="material-symbols-outlined">calendar_month</span> Quando?</b> Dias 17 e 18 de setembro. <a href="https://goo.gl/maps/ns2nwh9R3EoHGZ1t9" target="_blank" class=" text-decoration-none text-dark"><b class=" text-nowrap"><span class="material-symbols-outlined">location_on</span>&nbsp;Onde?</b>&nbsp;Unicid&nbsp;Tatuapé,&nbsp;São&nbsp;Paulo.&nbsp;</a></p>
+      <h4 class="w-100 text-center mb-4">VIII Encontro Nacional de&nbsp;Cursinhos Universitários&nbsp;Populares</h4>
+      <p class="w-100 text-center mb-4"><b><span class="material-symbols-outlined">calendar_month</span> Quando?</b> Dias 26 e 27 de agosto. <a href="https://goo.gl/maps/PzgBwnyGMBQDANDb7" target="_blank" class=" text-decoration-none text-dark"><b class=" text-nowrap"><span class="material-symbols-outlined">location_on</span>&nbsp;Onde?</b>&nbsp;Faculdade&nbsp;de&nbsp;Medicina&nbsp;da&nbsp;USP</a></p>
       <p> </p>
       <div class="w-100 text-center mb-2">
         <a href="https://www.instagram.com/brasil.cursinhos/" target="_blank" class="btn btn-tertiary-bc text-decoration-none m-1 minw-240 w-auto"><b><span class="material-symbols-outlined">info</span> Mais Informações</b></a>
-        <a href="https://forms.gle/Fz846Lu9abCuCAsD9" target="_blank" class="btn btn-tertiary-bc text-decoration-none m-1 minw-240 w-auto"><b><span class="material-symbols-outlined">priority</span> Realizar Inscrição</b></a>
-        <a href="https://drive.google.com/drive/folders/16pxYRxXMi8PM177De2ko1NROqp5SQ4Q5?usp=sharing" target="_blank" class="btn btn-tertiary-bc text-decoration-none m-1 minw-240 w-auto"><b><span class="material-symbols-outlined">format_list_bulleted</span> Conferir Programação</b></a>
+        <a href="https://forms.gle/MRNwb2SvSGq1F3wo7" target="_blank" class="btn btn-tertiary-bc text-decoration-none m-1 minw-240 w-auto"><b><span class="material-symbols-outlined">priority</span> Realizar Inscrição</b></a>
+        <a href="#" class="btn btn-tertiary-bc text-decoration-none m-1 minw-240 w-auto"><b><span class="material-symbols-outlined">format_list_bulleted</span> Conferir Programação</b></a>
       </div>
       
     </div>
