Correções layout ENCUP 2023

--- a/private/src/view/templates/encup/homepage.html
+++ b/private/src/view/templates/encup/homepage.html
@@ -13,18 +13,24 @@
 
 {% block innerMain %}
 <main class="page-content bg-drawn d-flex justify-content-center align-items-center">
-  <div class="card m-4 w-100 maxw-900">
-    <div class="card-header p-0">
-      <img src="/assets/img/banner-encup.png" alt="Banner ENCUP 2022" class="w-100">
+  <div class="card m-4 w-100 maxw-900  border-0">
+    <div class="card-header p-0 overflow-hidden">
+      <img src="/assets/img/banner-encup.png" alt="Banner ENCUP 2023" class="w-100">
     </div>
     <div class="card-body">
       <h4 class="w-100 text-center mb-4">VIII Encontro Nacional de&nbsp;Cursinhos Universitários&nbsp;Populares</h4>
-      <p class="w-100 text-center mb-4"><b><span class="material-symbols-outlined">calendar_month</span> Quando?</b> Dias 26 e 27 de agosto. <a href="https://goo.gl/maps/PzgBwnyGMBQDANDb7" target="_blank" class=" text-decoration-none text-dark"><b class=" text-nowrap"><span class="material-symbols-outlined">location_on</span>&nbsp;Onde?</b>&nbsp;Faculdade&nbsp;de&nbsp;Medicina&nbsp;da&nbsp;USP</a></p>
-      <p> </p>
+      <div class="row mb-4">
+        <div class="col-md-6 text-center text-md-end">
+          <p class="mb-3 mb-md-0"><b><span class="material-symbols-outlined">calendar_month</span> Quando?</b> Dias 26 e 27 de agosto.</p>
+        </div>
+        <div class="col-md-6 text-center text-md-start">
+          <p class="mb-0"><a href="https://goo.gl/maps/PzgBwnyGMBQDANDb7" target="_blank" class="mt-3 text-decoration-none text-dark"><b class="text-nowrap"><span class="material-symbols-outlined">location_on</span>&nbsp;Onde?</b>&nbsp;Faculdade&nbsp;de&nbsp;Medicina&nbsp;da&nbsp;USP</a></p>
+        </div>
+      </div>
       <div class="w-100 text-center mb-2">
         <a href="https://www.instagram.com/brasil.cursinhos/" target="_blank" class="btn btn-tertiary-bc text-decoration-none m-1 minw-240 w-auto"><b><span class="material-symbols-outlined">info</span> Mais Informações</b></a>
-        <a href="https://forms.gle/MRNwb2SvSGq1F3wo7" target="_blank" class="btn btn-tertiary-bc text-decoration-none m-1 minw-240 w-auto"><b><span class="material-symbols-outlined">priority</span> Realizar Inscrição</b></a>
-        <a href="#" class="btn btn-tertiary-bc text-decoration-none m-1 minw-240 w-auto"><b><span class="material-symbols-outlined">format_list_bulleted</span> Conferir Programação</b></a>
+        <a href="https://forms.gle/MRNwb2SvSGq1F3wo7" target="_blank" class="btn btn-tertiary-bc text-decoration-none m-1 minw-240 w-auto"><b><span class="material-symbols-outlined">priority</span> Inscreva-se (em breve)</b></a>
+        <a href="#" class="btn btn-tertiary-bc text-decoration-none m-1 minw-240 w-auto"><b><span class="material-symbols-outlined">format_list_bulleted</span> Programação (em breve)</b></a>
       </div>
       
     </div>
