Alterado botão de inscrição encup

--- a/private/src/view/templates/encup/homepage.html
+++ b/private/src/view/templates/encup/homepage.html
@@ -29,7 +29,7 @@
       </div>
       <div class="w-100 text-center mb-2">
         <a href="https://www.instagram.com/brasil.cursinhos/" target="_blank" class="btn btn-tertiary-bc text-decoration-none m-1 minw-240 w-auto"><b><span class="material-symbols-outlined">info</span> Mais Informações</b></a>
-        <a href="https://forms.gle/MRNwb2SvSGq1F3wo7" target="_blank" class="btn btn-tertiary-bc text-decoration-none m-1 minw-240 w-auto"><b><span class="material-symbols-outlined">priority</span> Inscreva-se (em breve)</b></a>
+        <a href="https://forms.gle/MRNwb2SvSGq1F3wo7" target="_blank" class="btn btn-tertiary-bc text-decoration-none m-1 minw-240 w-auto"><b><span class="material-symbols-outlined">priority</span> Inscreva-se</b></a>
         <a href="#" class="btn btn-tertiary-bc text-decoration-none m-1 minw-240 w-auto"><b><span class="material-symbols-outlined">format_list_bulleted</span> Programação (em breve)</b></a>
       </div>
       
