Adição das informações de pagamento para inscrição ENCUP 2023

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -23,6 +23,7 @@
 // components
 @import 'components/buttons';
 @import 'components/calendar';
+@import 'components/modal';
 
 // pages
 @import 'pages/home';
