--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -122,3 +122,11 @@ main a:hover {
   width: 100%;
   min-width: 500px;
 }
+
+.resize-none {
+  resize: none;
+}
+
+.word-break {
+  word-break: break-all;
+}
