--- a/private/src/view/templates/base.html
+++ b/private/src/view/templates/base.html
@@ -37,7 +37,7 @@
     <!-- Javascript -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-    <script src="/assets/js/default.js"></script>
+    <script src="/assets/js/default.js?v=1.00"></script>
 {%  block scriptsJS %}{% endblock scriptsJS %}
   </body>
 </html>
