--- a/private/src/view/templates/encup/homepage.html
+++ b/private/src/view/templates/encup/homepage.html
@@ -154,7 +154,7 @@
         <div id="pix" class="d-none">
           <div class="card">
             <div class="card-header text-center">
-              <h5 class="mb-0 fw-bold">INSTRIÇÕES PARA PAGAMENTO VIA PIX</h5>
+              <h5 class="mb-0 fw-bold">INSTRUÇÕES PARA PAGAMENTO VIA PIX</h5>
             </div>
             <div class="card-body">
               <div class="row code-pix" id="code-pix-1">
