Adição da programação encup 2023 e observações sobre preço do ingresso

--- a/scss/theme/_main-theme.scss
+++ b/scss/theme/_main-theme.scss
@@ -6,6 +6,19 @@
   background-color: $primary-color-bc;
 }
 
+.bg-encup-primary {
+  background-color: rgb(0, 129, 176);
+}
+
+.bg-encup-secondary {
+  background-color: rgb(255, 164, 74);
+}
+
+.bg-encup-tertiary {
+  background-color: rgb(152, 245, 183);
+}
+
+
 .bg-drawn{
   background: url("/assets/img/bg-draws-25.png") repeat;
   background-color: $primary-color-bc;
