--- a/private/src/view/templates/encup/homepage.html
+++ b/private/src/view/templates/encup/homepage.html
@@ -32,7 +32,9 @@
         <button type="button" class="btn btn-tertiary-bc m-1 minw-240 w-auto" data-bs-toggle="modal" data-bs-target="#modal-subscription">
           <b><span class="material-symbols-outlined">priority</span> Inscreva-se</b>
         </button>
-        <a href="#" class="btn btn-tertiary-bc text-decoration-none m-1 minw-240 w-auto"><b><span class="material-symbols-outlined">format_list_bulleted</span> Programação (em breve)</b></a>
+        <button type="button" class="btn btn-tertiary-bc m-1 minw-240 w-auto" data-bs-toggle="modal" data-bs-target="#modal-event-schedule">
+          <b><span class="material-symbols-outlined">format_list_bulleted</span> Programação</b>
+        </button>
       </div>
       
     </div>
@@ -41,7 +43,7 @@
 
 <!-- Modal -->
 <div class="modal fade" id="modal-subscription" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modal-subscription-label" aria-hidden="true">
-  <div class="modal-dialog modal-encup modal-fullscreen-lg-down modal-dialog-centered">
+  <div class="modal-dialog modal-encup modal-fullscreen-lg-down modal-dialog-centered modal-dialog-scrollable">
     <div class="modal-content">
       <div class="modal-header bg-primary-bc text-white">
         <h1 class="modal-title fs-5 fw-bold" id="modal-subscription-label">Inscrição ENCUP 2023</h1>
@@ -49,9 +51,14 @@
       </div>
       <div class="modal-body">
         <div id="tickets">
+          <p class="text-center mb-1">
+            <b>1º</b> Selecione o seu ingresso e realize o pagamento via PIX* ou através do PagBank em até 2 vezes no cartão*.
+          </p>
           <p class="text-center">
-            <b>1º</b> Selecione o seu ingresso e realize o pagamento via PIX ou através do PagBank em até 2 vezes no cartão.<br>
             <b>2º</b> Preencha o formulário de inscrição. <span class="fw-medium">Você precisará anexar o comprovante de pagamento no formulário.</span>
+          </p>
+          <p class="text-center fs-7">
+            <b>*Por quê cobramos ingresso?</b> Esse valor é revertido como ajuda de custos na compra do café da manhã / coffee break, kit do participante e&nbsp;pagamento das diárias na hospedagem. Além destes, existem custos relativos a locação do espaço, material gráfico e fotos/transmissão.</span>
           </p>
           <div class="card mb-3">
             <div class="card-header">
@@ -386,6 +393,202 @@
           <a href="https://forms.gle/MRNwb2SvSGq1F3wo7" target="_blank" class="btn btn-tertiary-bc text-decoration-none m-1 minw-240 w-auto"><b>Abrir Formulário de Inscrição</b> <span class="material-symbols-outlined">edit_note</span></a>
         </div>
         
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="modal-event-schedule" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modal-event-schedule-label" aria-hidden="true">
+  <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
+    <div class="modal-content">
+      <div class="modal-header bg-primary-bc text-white">
+        <h1 class="modal-title fs-3 fw-bold" id="modal-event-schedule-label">PROGRAMAÇÃO ENCUP 2023</h1>
+        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close" id="btn-close-modal-event-schedule"></button>
+      </div>
+      <div class="modal-body">
+        <div class="row g-3">
+          <div class="col-12 col-lg-6">
+            <div class="card">
+              <div class="card-header bg-encup-primary text-white">
+                <h4 class="card-title text-center mb-0">SÁBADO — 26/08</h4>
+              </div>
+              <div class="card-body">
+                <div class="row justify-content-center align-items-center mx-0 bg-encup-tertiary py-2 my-2">
+                  <div class="col-auto fw-semibold">
+                    08h30 às 09h15
+                  </div>
+                  <div class="col">
+                    Café da manhã no evento
+                  </div>
+                </div>
+                <div class="row justify-content-center align-items-center mx-0">
+                  <div class="col-auto fw-semibold">
+                    09h15 às 10h00
+                  </div>
+                  <div class="col">
+                    Credenciamento
+                  </div>
+                </div>
+                <div class="row justify-content-center align-items-center mx-0 bg-encup-secondary py-2 my-2">
+                  <div class="col-auto fw-semibold">
+                    10h00 às 10h30
+                  </div>
+                  <div class="col">
+                    Abertura
+                  </div>
+                </div>
+                <div class="row justify-content-center align-items-center mx-0">
+                  <div class="col-auto fw-semibold">
+                    10h30 às 12h00
+                  </div>
+                  <div class="col">
+                    Mesa 1: Importância da valorização das diferenças nos Currículos Pedagógicos
+                  </div>
+                </div>
+                <div class="row justify-content-center align-items-center mx-0 bg-encup-tertiary py-2 my-2">
+                  <div class="col-auto fw-semibold">
+                    12h00 às 13h45
+                  </div>
+                  <div class="col">
+                    Almoço
+                  </div>
+                </div>
+                <div class="row justify-content-center align-items-center mx-0">
+                  <div class="col-auto fw-semibold">
+                    13h50 às 14h50
+                  </div>
+                  <div class="col">
+                    Diagnóstico e reflexões iniciais sobre a Rede de Cursinhos
+                  </div>
+                </div>
+                <hr class="my-2 border-2">
+                <div class="row justify-content-center align-items-center mx-0">
+                  <div class="col-auto fw-semibold">
+                    15h00 às 16h25
+                  </div>
+                  <div class="col">
+                    Oficinas temáticas sobre gestão e sala de aula
+                  </div>
+                </div>
+                <div class="row justify-content-center align-items-center mx-0  bg-encup-tertiary py-2 my-2">
+                  <div class="col-auto fw-semibold">
+                    16h30 às 17h00
+                  </div>
+                  <div class="col">
+                    Café reforçado
+                  </div>
+                </div>
+                <div class="row justify-content-center align-items-center mx-0">
+                  <div class="col-auto fw-semibold">
+                    17h05 às 18h35
+                  </div>
+                  <div class="col">
+                    Mesa 2: O papel das universidades no fortalecimento dos cursinhos populares
+                  </div>
+                </div>
+                <div class="row justify-content-center align-items-center mx-0 bg-encup-secondary py-2 mt-2">
+                  <div class="col-auto fw-semibold">
+                    18h35 às 18h45
+                  </div>
+                  <div class="col">
+                    Encerramento 1º dia
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-lg-6">
+            <div class="card">
+              <div class="card-header bg-encup-primary text-white">
+                <h4 class="card-title text-center mb-0">DOMINGO — 27/08</h4>
+              </div>
+              <div class="card-body">
+                <div class="row justify-content-center align-items-center mx-0 bg-encup-tertiary py-2 my-2">
+                  <div class="col-auto fw-semibold">
+                    08h30 às 09h15
+                  </div>
+                  <div class="col">
+                    Café da manhã no evento
+                  </div>
+                </div>
+                <div class="row justify-content-center align-items-center mx-0">
+                  <div class="col-auto fw-semibold">
+                    09h30 às 10h00
+                  </div>
+                  <div class="col">
+                    Credenciamento
+                  </div>
+                </div>
+                <div class="row justify-content-center align-items-center mx-0 bg-encup-secondary py-2 my-2">
+                  <div class="col-auto fw-semibold">
+                    10h00 às 10h15
+                  </div>
+                  <div class="col">
+                    Abertura do segundo dia
+                  </div>
+                </div>
+                <div class="row justify-content-center align-items-center mx-0">
+                  <div class="col-auto fw-semibold">
+                    10h15 às 11h45
+                  </div>
+                  <div class="col">
+                    Mesa 3: Panorama dos vestibulares pós reforma do ensino médio
+                  </div>
+                </div>
+                <div class="row justify-content-center align-items-center mx-0 bg-encup-tertiary py-2 my-2">
+                  <div class="col-auto fw-semibold">
+                    11h45 às 13h30
+                  </div>
+                  <div class="col">
+                    Almoço
+                  </div>
+                </div>
+                <div class="row justify-content-center align-items-center mx-0">
+                  <div class="col-auto fw-semibold">
+                    13h35 às 15h00
+                  </div>
+                  <div class="col">
+                    Aquários
+                  </div>
+                </div>
+                <hr class="my-2 border-2">
+                <div class="row justify-content-center align-items-center mx-0">
+                  <div class="col-auto fw-semibold">
+                    15h05 às 16h35
+                  </div>
+                  <div class="col">
+                    Planejamento estratégico em rede e apresentações temáticas
+                  </div>
+                </div>
+                <div class="row justify-content-center align-items-center mx-0 bg-encup-secondary py-2 mt-2">
+                  <div class="col-auto fw-semibold">
+                    16h40 às 16h50
+                  </div>
+                  <div class="col">
+                    Encerramento do evento
+                  </div>
+                </div>
+                <hr class="my-0 border-2 opacity-100">
+                <div class="row justify-content-center align-items-center mx-0 bg-encup-secondary py-2">
+                  <div class="col-auto fw-semibold">
+                    16h50 às 17h30
+                  </div>
+                  <div class="col">
+                    Café de encerramento e trocas finais
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <div class="w-100 text-center">
+          <button class="btn btn-primary-bc" id="btn-page-back"><b>
+            <span class="material-symbols-outlined">arrow_back</span>
+            Voltar para a página anterior</b>
+          </button>
+        </div>
       </div>
     </div>
   </div>
