corrigido erro botão fechar modal programação

--- a/private/src/view/templates/encup/homepage.html
+++ b/private/src/view/templates/encup/homepage.html
@@ -584,7 +584,7 @@
       </div>
       <div class="modal-footer">
         <div class="w-100 text-center">
-          <button class="btn btn-primary-bc" id="btn-page-back"><b>
+          <button class="btn btn-primary-bc" data-bs-dismiss="modal"><b>
             <span class="material-symbols-outlined">arrow_back</span>
             Voltar para a página anterior</b>
           </button>
