--- a/private/src/view/templates/encup/homepage.html
+++ b/private/src/view/templates/encup/homepage.html
@@ -582,7 +582,7 @@
           </div>
         </div>
       </div>
-      <div class="modal-footer">
+      <div class="modal-footer bg-primary-bc">
         <div class="w-100 text-center">
           <button class="btn btn-primary-bc" data-bs-dismiss="modal"><b>
             <span class="material-symbols-outlined">arrow_back</span>
