Alterado descrição dos usos de valores do ingresso encup

--- a/private/src/view/templates/encup/homepage.html
+++ b/private/src/view/templates/encup/homepage.html
@@ -58,7 +58,7 @@
             <b>2º</b> Preencha o formulário de inscrição. <span class="fw-medium">Você precisará anexar o comprovante de pagamento no formulário.</span>
           </p>
           <p class="text-center fs-7">
-            <b>*Por quê cobramos ingresso?</b> Esse valor é revertido como ajuda de custos na compra do café da manhã / coffee break, kit do participante e&nbsp;pagamento das diárias na hospedagem. Além destes, existem custos relativos a locação do espaço, material gráfico e fotos/transmissão.</span>
+            <b>*Por quê cobramos ingresso?</b> Esse valor é revertido como ajuda de custos na compra do café da manhã / coffee break, kit do participante e&nbsp;pagamento das diárias na hospedagem. Além destes, existem custos relativos a utilização do espaço, material gráfico e fotos/transmissão.</span>
           </p>
           <div class="card mb-3">
             <div class="card-header">
