Alterada a programação do encup

--- a/private/src/view/templates/encup/homepage.html
+++ b/private/src/view/templates/encup/homepage.html
@@ -532,7 +532,7 @@
                     10h15 às 11h45
                   </div>
                   <div class="col">
-                    Mesa 3: Panorama dos vestibulares pós reforma do ensino médio
+                    Mesa 3: Desdobramentos da Reforma do Ensino Médio: aspectos psicopedagógicos e a atuação dos cursinhos populares
                   </div>
                 </div>
                 <div class="row justify-content-center align-items-center mx-0 bg-encup-tertiary py-2 my-2">
