Alterado espaçamento local

--- a/private/src/view/templates/encup/pages/exceptional-inscription.html
+++ b/private/src/view/templates/encup/pages/exceptional-inscription.html
@@ -13,7 +13,7 @@
 
 {% block innerMain %}
 <main class="bg-drawn d-flex justify-content-center align-items-center">
-  <div class="card m-5 w-100 maxw-900  border-0">
+  <div class="card m-3 m-lg-5 w-100 maxw-900  border-0">
     <div class="card-header">
       <h4 class="text-center mb-0 fw-bold">INSTRUÇÕES PARA COMPRA DO INGRESSO E INSCRIÇÃO ENCUP 2023</h4>
     </div>
