Incluído aviso de excepicionalidade

--- a/private/src/view/templates/encup/pages/exceptional-inscription.html
+++ b/private/src/view/templates/encup/pages/exceptional-inscription.html
@@ -19,6 +19,9 @@
     </div>
     <div class="card-body">
       <div id="tickets">
+        <p class="text-center">
+          <strong>ATENÇÃO:</strong> Apenas realize esta inscrição caso tenha sido expressamente autorizado pela diretoria da Brasil Cursinhos.
+        </p>
         <p class="text-center mb-1">
           <b>1º</b> Selecione o seu ingresso e realize o pagamento via PIX* ou através do PagBank em até 2 vezes no cartão*.
         </p>
